# Cmake_wxWidgets

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
SampleGuiPlugin1/: CMakeLists.txt
SampleGuiPlugin2/: CMakeLists.txt
SampleNonGuiPlugin/: CMakeLists.txt
app/: CMakeLists.txt  app.cpp
wxGuiPluginBase/: CMakeLists.txt
wxModularCore/: CMakeLists.txt
wxModularHost/: CMakeLists.txt
wxNonGuiPluginBase/: CMakeLists.txt
